// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AMPSettingToggle matches snapshots 1`] = `
<div
  className="amp-setting-toggle"
>
  <div
    className="components-base-control components-toggle-control css-wdf2ti-Wrapper e1puf3u3"
  >
    <div
      className="components-base-control__field css-igk9ll-StyledField e1puf3u2"
    >
      <span
        className="components-form-toggle is-checked"
      >
        <input
          checked={true}
          className="components-form-toggle__input"
          id="inspector-toggle-control-0"
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="components-form-toggle__track"
        />
        <span
          className="components-form-toggle__thumb"
        />
      </span>
      <label
        className="components-toggle-control__label"
        htmlFor="inspector-toggle-control-0"
      >
        <div
          className="amp-setting-toggle__label-text"
        >
          <h3>
            My title
          </h3>
          <p>
            My text
          </p>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`AMPSettingToggle matches snapshots 2`] = `
<div
  className="amp-setting-toggle"
>
  <div
    className="components-base-control components-toggle-control css-wdf2ti-Wrapper e1puf3u3"
  >
    <div
      className="components-base-control__field css-igk9ll-StyledField e1puf3u2"
    >
      <span
        className="components-form-toggle"
      >
        <input
          checked={false}
          className="components-form-toggle__input"
          id="inspector-toggle-control-1"
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="components-form-toggle__track"
        />
        <span
          className="components-form-toggle__thumb"
        />
      </span>
      <label
        className="components-toggle-control__label"
        htmlFor="inspector-toggle-control-1"
      >
        <div
          className="amp-setting-toggle__label-text"
        >
          <h3>
            My title
          </h3>
        </div>
      </label>
    </div>
  </div>
</div>
`;
